// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordStrength actions should update password 1`] = `
Object {
  "payload": "some-password",
  "type": "PASSWORD_STRENGTH_PASSWORD_CHANGED",
}
`;

exports[`PasswordStrength actions should update password-confirmation 1`] = `
Object {
  "payload": "some-password",
  "type": "PASSWORD_STRENGTH_PASSWORD_CONFIRMATION_CHANGED",
}
`;
